Cambios en homework 8 y 10

--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -51,31 +51,29 @@
 </head>
 
 <body>
+    <div class="contenedor">
+		<div class="divClass">
+			<h1> Richard Seabra </h1>
+			<h3> Henry </h3>
+			<h4> tarea de HTML / CSS </h4>
+		</div>
+ 
+		<div class="divClass">
+			<span id="spanId"> My comida favorita es pabellon criollo, comida Venezolana. </span>
+			<a href='http://www.soyhenry.com'> <p> Esto es un link! a la pagina de soyHenry </p> </a>
+		</div>
 
-  <div class="divClass">
-	   <h1> Richard Seabra </h1>
-	   <h3> Henry </h3>
-	   <h4> tarea de HTML / CSS </h4>
-  </div>
+		<div id="thirdDiv">
+			<ul> 
+			<li> <p> Lunes </p></li>
+			<li> <p> Martes </p></li>
+			<li> <p> Miercoles </p></li>
+			<li> <p> Jueves </p></li>
+			<li> <p> Viernes </p></li>
+			</ul>
+			<img class="img" src="BANNER-CANINO.jpg" />
+		</div>
 
-  <div class="divClass">
-	 <span id="spanId"> My comida favorita es pabellon criollo, comida Venezolana. </span>
-	 <a href='http://www.soyhenry.com'> Esto es un link! a la pagina de soyHenry </a>
-  </div>
-
-  <div id="thirdDiv">
-	<ul> 
-	   <li> <p> Lunes </p></li>
-	   <li> <p> Martes </p></li>
-	   <li> <p> Miercoles </p></li>
-	   <li> <p> Jueves </p></li>
-	   <li> <p> Viernes </p></li>
-	</ul>
-	  <img class="img" src="BANNER-CANINO.jpg" />
-  </div>
-
+	</div>
 </body>
-</html>
-
-
 </html>
