--- a/08-HTML/homework/CV.html
+++ b/08-HTML/homework/CV.html
@@ -15,10 +15,10 @@
 			<h1> Richard Seabra </h1>
 			<img class="img" src="img/rs_100.jpg" />
 			<h3> Ingeniero en Computación </h3>
-			 <p> Venezolano/Ciudadano y Pasaporte Portugués.</p> 
+			<h3> Venezolano/Ciudadano y Pasaporte Portugués.</h3> 
 			<h4> Interesado en convertirse Desarrollador Full Stack </h4>
 			<p> 
-				<a href="https://www.linkedin.com/in/richard-seabra-2a1947129" _ > LinkedIn  </a>
+				<a href="https://www.linkedin.com/in/richard-seabra-2a1947129" target="_blank_"> LinkedIn  </a>
 			</p> 
 		</div>
  
@@ -37,15 +37,119 @@
            </div>
 		</div>
 
-		
-		<div id="thirdDiv">
-			<ul> 
-			<li> <p> Lunes </p></li>
-			<li> <p> Martes </p></li>
-			<li> <p> Miercoles </p></li>
-			<li> <p> Jueves </p></li>
-			<li> <p> Viernes </p></li>
+		<div class="Experiencia">
+ 			<h3> Experiencias laborales: </h3>
+			 <ul> 
+				<li> <p> Empresa: MERSAN C.A (GRUPO MERINO C.A.) </p></li>
+				<li> <p> Desde: Febrero/2019 – Al presente (Tipo Nomina: FreeLancer). </p></li>
+				<li> <p> Cargo: Programador Web </p></li>
+				<li> <p> Responsabilidad: </p></li>
+   				<ul> 
+    				<li> <p> Desarrollar las páginas web del GRUPO MERINO con base a un diseño proporcionado por un diseñador, desarrolladas en HTML, CSS, BOOTSTRAP4 y JAVASCRIPT, las cuales son: </p>
+					 <ul>
+                        <li> <p> mersan.com.ve </p></li>
+						<li> <p> www.igmiberia.com </p></li>
+					  	<li> <p> www.igmvenezuela.com </p></li>
+						<li> <p>www.igmvenezuela.com </p></li>
+					 </ul> 
+				    </li>
+					<li> <p> Terminé el desarrollo de las páginas web para PUREVER VENEZUELA y PUREVER COLOMBIA desarrolladas en WORDPRESS utilizando ADVANCED CUSTOM FIELDS, luego fueron cambiadas a WIX por orden de la empresa matriz PUREVER PORTUGAL desarrollados por ellos. </p></li>
+					<li> <p> Desarrollé un Carrusel de Precios para las TIENDAS SANTA CLARA utilizando PHP con base de datos POSTGRESSQL donde se muestran los productos, descripción con imagen, unidad medida y precios para ser mostrado en los televisores de las tiendas para sus clientes. </p></li>
+					<li> <p> Desarrollé una Lista de Precios para la empresa MERSAN C.A. con sus productos, descripción, unidad medida y precios utilizando PHP con base de datos SQLSERVER.</p></li>
+					<li> <p> Soporte a la migración del ODOO versión 11 al ODOO versión 14.</p></li>
+					<li> <p> Soporte a la migración de Microsoft Dynamics GP a Microsoft Dynamics 365 Business Central con la empresa GT-NET.</p></li>
+					<li> <p> Páginas web desarrollada para otra empresa fuera del GRUPO MERINO utilizando WORDPRESS - DIVI</p>
+					<ul>
+                        <li> <p> www.invglobal.com </p></li>
+					</ul> 
+				    </li>
+				</ul>
 			</ul>
+		</div>
+		<div class="Experiencia">
+			<ul> 
+			   <li> <p> Empresa: FORD MOTOR DE VENEZUELA S.A. </p></li>
+			   <li> <p> Desde: Mayo/2003 – Hasta: Diciembre/2018. </p></li>
+			   <li> <p> Cargo: Analista de Sistema Senior.</p></li>
+			   <li> <p> Responsabilidad: </p></li>
+				<ul> 
+				   <li> <p> Empecé trabajando en la empresa CONGENTE C.A, es una empresa OUTSOURCING asignado a la empresa FORD MOTOR DE VENEZUELA C.A. </p></li>
+				   <li> <p> Soporte a las aplicaciones utilizando base de datos Oracle en los sistemas administrativos tanto para FORD VENEZUELA COMO FORD COLOMBIA. </p></li>
+				   <li> <p> Encargado del Sistema de Garantías de Vehículos, el cual es un Sistema de gestión de reclamos de garantías entre concesionarios y/o talleres, utilizando la aplicación CONFORD (Es una aplicación Web B2B que establece el concepto de negocio entre empresas) desarrollado en HTML, CSS, PERL, CGI. </p></li>
+				   <li> <p> Soporte a la aplicación WAPLVAP (Es una aplicación B2E manejada por base de datos Oracle SQL, SQL DEVELOPER, PLSQL, SQLFORMS y SQLREPORTS).</p></li>
+				   <li> <p> Soporte a otras aplicaciones como Facturación de Repuestos, inventarios, cuentas por cobrar, cuentas por pagar y cobranza. </p></li>
+			   </ul>
+		   </ul>
+	    </div>
+
+	    <div class="Educacion">
+			<h3> Educación: </h3>
+			<ul> 
+			  <li> <p> Universidad: Universidad José Antonio Páez </p></li>
+			  <li> <p> Título: Ingeniero en Computación. </p></li>
+			  <li> <p> Fecha: Enero/2005 hasta Julio/2010.</p></li>
+		    </ul>
+		</div>
+	   
+		<div class="Idioma">
+			<h3> Idiomas: </h3>
+			<ul> 
+			  <li> <p> Español </p>
+				<ul> 
+				 <li> <p> Nativo </p></li>
+			    </ul> 
+			   </li>
+			  <li> <p> Inglés </p>
+				<ul> 
+				  <li> <p> Escrito: Intermedio </p></li>
+			  	  <li> <p> Oral: Básico </p></li>
+				</ul> 
+			  </li>
+		    </ul>
+		</div>
+
+		<div class="habilidades">
+			<h3> Habilidades Técnicas : </h3>
+			<ul> 
+			  <li> <p> <b> Lenguaje de Programación </b> </p>
+				<ul> 
+				 <li> <p> PYTHON (Básico) </p></li>
+				 <li> <p> JAVA  (Básico) </p></li>
+				 <li> <p> C#(C CHARP) (Básico) </p></li>
+				 <li> <p> PHP (Intermedio) </p></li>
+				 <li> <p> JAVASCRIPT (Intermedio) </p></li>
+				 <li> <p> JAVASCRIPT (Intermedio) </p></li>				 
+			    </ul> 
+			   </li>
+			  <li> <p> <b> Diseño Web </b> </p>
+				<ul> 
+				  <li> <p> CSS3 (Intermedio)</p></li>
+			  	  <li> <p> HTML5 (Avanzado) </p></li>
+				  <li> <p> BOOTSTRAP4 (Intermedio) </p></li>
+				  <li> <p> JQUERY (Intermedio) </p></li>
+				  <li> <p> REACT (Básico) </p></li>
+			  	  <li> <p> WORDPRESS (Intermedio) </p></li>
+				</ul> 
+			  </li>
+
+			  <li> <p> <b> Base de Datos </b> </p>
+				<ul> 
+				  <li> <p> MYSQL (Intermedio)</p></li>
+			  	  <li> <p> SQL-SERVER (Intermedio) </p></li>
+				  <li> <p> POSTGRESSQL (Intermedio) </p></li>
+				  <li> <p> ORACLE (Intermedio) </p></li>
+				</ul> 
+			  </li>			
+			  <li> <p> <b> Otras Habilidades </b> </p>
+				<ul> 
+				  <li> <p> VISUAL STUDIO CODE (Intermedio)</p></li>
+			  	  <li> <p> LINUX (Intermedio) </p></li>
+				  <li> <p> ODOO (ERP) (Intermedio) </p></li>
+				  <li> <p> MICROSOFT DYNAMICS 365 (BUSINESS CENTRAL) (Intermedio) </p></li>
+				  <li> <p> METODOLOGÍA JIRA (Básico) </p></li>
+				</ul> 
+			  </li>				    
+		    </ul> <br> <br> <br> 
 		</div>
 
 	</div>
